@@ -12,6 +12,6 @@ S3method(names, SpectraDataFrame)
 S3method("names<-", SpectraDataFrame)
 
 exportMethods(spectra, "spectra<-", wl, "wl<-", id, "id<-", data, "data<-", units, "units<-", resolution, "[", "$", "[[", add)
-exportMethods(aggregate_spectra, subset, mutate)
+exportMethods(aggregate_spectra, subset, mutate, split)
 
 exportPattern("^[^\\.]")
