@@ -161,14 +161,6 @@ subset.SpectraDataFrame <- function(x, subset, select, drop = FALSE, ...) {
 
 setMethod("subset", "SpectraDataFrame", subset.SpectraDataFrame)
 
-## Split
-
-split.SpectraDataFrame <- function(x, f, drop = FALSE, ...){
-  lapply(split(seq_len(nrow(x)), f, drop = drop, ...), function(ind) x[ind, , drop = FALSE])
-}
-
-setMethod("split", "SpectraDataFrame", split.SpectraDataFrame)
-
 ## Separate calibration set vs validation set
 
 if (!isGeneric("separate"))
